# cobolsizer

./: Cargo.toml
examples/: sample1.cpy
src/: main.rs
src/cfg/: args.rs  mod.rs
