[package]
name = "cobolsizer"
version = "0.1.0"
authors = ["stephaneworkspace <s.bressani@bluewin.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.3.1"
regex = { version = "1.4.3", features = ["pattern"] }
clap = "2.33.3"
